--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             <div class="col s1"></div>           
             <a class='orange dropdown-button btn col s3' id="dropdown" data-activates='dropdown1'>Bet Amount</a>
             <select id='dropdown1' class='dropdown-content'>
-                <option><a value=".0001" id="0.0001">0.0001</a></option>
-                <option><a value=".001" id="0.001">0.001</a></option>
-                <option><a value=".01" id="0.01">0.01</a></option>
-                <option><a value=".1" id="0.1">0.1</a></option>
-                <option><a value="1" id="1">1</a></option>
+                <a value=".0001" id="0.0001">0.0001</a>
+                <a value=".001" id="0.001">0.001</a>
+                <a value=".01" id="0.01">0.01</a>
+                <a value=".1" id="0.1">0.1</a>
+                <a value="1" id="1">1</a>
             </select>
     		<div class="col s1"></div>
             <button id="spin" class="waves-effect waves-light btn btn-large col s3">SPIN! (0-36)</button>
