--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
             <button id="clear" class="waves-effect waves-light btn btn-large col s1">clear</button>
             <div class="col s1"></div>           
             <a class='orange dropdown-button btn col s3' id="dropdown" data-activates='dropdown1'>Bet Amount</a>
-            <select id='dropdown1' class='dropdown-content'>
-                <a value=".0001" id="0.0001">0.0001</a>
-                <a value=".001" id="0.001">0.001</a>
-                <a value=".01" id="0.01">0.01</a>
-                <a value=".1" id="0.1">0.1</a>
-                <a value="1" id="1">1</a>
+            <select id='dropdown1' class='dropdown-content col s3'>
+                <option value="0.0001" id="0.0001">0.0001</option>
+                <option value="0.001" id="0.001">0.001</option>
+                <option value="0.01" id="0.01">0.01</option>
+                <option value="0.1" id="0.1">0.1</option>
+                <option value="1" id="1">1</option>
             </select>
     		<div class="col s1"></div>
             <button id="spin" class="waves-effect waves-light btn btn-large col s3">SPIN! (0-36)</button>
