--- a/rules.html
+++ b/rules.html
@@ -19,6 +19,7 @@
 	            <li><a href="index.html">Home</a></li>
 	            <li><a href="account.html">Account</a></li>
 	            <li><a href="rules.html">Rules</a></li>
+                <li><a href="login.html">Log In</a></li>
 	        </ul>
 	    </div>
 	</nav>
@@ -30,7 +31,7 @@
                         <span class="card-title"><u>About</u></span>
                         <ol>
                         <li>Deposit BTC into account to play</li>
-                        <li>Place chips on inside or outside to bet</li>
+                        <li>Place bets by clicking roulette board (Inside bets or Outside bets)</li>
                         <li>Spin, match, and win!</li>
                         </ol>
                     </div>
