--- a/login.html
+++ b/login.html
@@ -19,27 +19,47 @@
 	            <li><a href="index.html">Home</a></li>
 	            <li><a href="account.html">Account</a></li>
 	            <li><a href="rules.html">Rules</a></li>
-                <li><a href="login.html">Log In</a></li>
 	        </ul>
 	    </div>
 	</nav>
-    <center>
-        <h2 class="white-text"><b>Welcome, </b></h2>
-    <div id="score" class="card panel">
-            <h3>
-                Balance: <a id="balance">10</a> BTC
-            </h3>
-    </div>
-    </center>
+<center>
     <div class="section"></div>
+    <h2 class="white-text"><b>Log In...</b></h2>
     <div class="container">
-        <div class="row">
-            <button class="waves-effect waves-light btn col s5">Deposit</button>
-            <div class="col s2"></div>
-            <button class="waves-effect waves-light btn col s5">Withdraw</button>
+        <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+            <form class="col s12" method="post">
+                <div class='row'>
+                    <div class='col s12'>
+                    </div>
+                </div>
+                <div class='row'>
+                    <div class='input-field col s12'>
+                        <input class='validate' type='email' name='email' id='email' />
+                        <label for='email'>Enter your email</label>
+                    </div>
+                </div>
+                <div class='row'>
+                    <div class='input-field col s12'>
+                        <input class='validate' type='password' name='password' id='password' />
+                        <label for='password'>Enter your password</label>
+                    </div>
+                    <label style='float: right;'>
+                        <a class='pink-text' href='#!'><b>Forgot Password?</b></a>
+                    </label>
+                </div>
+                <br />
+                <center>
+                    <div class='row'>
+                        <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect green'>Login</button>
+                    </div>
+                </center>
+            </form>
         </div>
     </div>
-    <footer class="black page-footer">
+    <a class="btn btn-primary black" href="#!">Create account</a>
+    <div class="section"></div>
+</center>
+<footer class="black page-footer">
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
