--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <div class="blue accent-4 nav-wrapper">
+        <div class="black accent-4 nav-wrapper">
             <a href="#" class="brand-logo center"><b>&#9729; Roulette</b></a>
             <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="index.html">Home</a></li>
@@ -176,7 +176,7 @@
 
 
     <!-- Footer -->
-    <footer class="blue accent-4 page-footer">
+    <footer class="black accent-4 page-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
