--- a/public/rules.html
+++ b/public/rules.html
@@ -16,7 +16,7 @@
 	    <div class="black nav-wrapper">
 	        <a href="#" class="brand-logo center">Roulette1</a>
 	        <ul id="nav-mobile" class="left hide-on-med-and-down">
-	            <li><a href="index.html">Home</a></li>
+	            <li><a href="../index.html">Home</a></li>
 	            <li><a href="account.html">Account</a></li>
 	            <li><a href="rules.html">Rules</a></li>
                 <li><a href="login.html">Log In</a></li>
